--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,29 +35,29 @@ FOREACH(file ${tests})
   ADD_TEST(${etapa}_${testname} perl -I ./tests/scripts ./tests/scripts/tesh ${file})
 ENDFOREACH()
 
-OPTION(ETAPA_1 "The Etapa 1 compilation" ON)
-OPTION(ETAPA_2 "The Etapa 2 compilation" OFF)
-OPTION(ETAPA_3 "The Etapa 3 compilation" OFF)
-OPTION(ETAPA_4 "The Etapa 4 compilation" OFF)
-OPTION(ETAPA_5 "The Etapa 5 compilation" OFF)
-OPTION(ETAPA_6 "The Etapa 6 compilation" OFF)
-OPTION(ETAPA_7 "The Etapa 7 compilation" OFF)
+OPTION(E1 "The Etapa 1 compilation" ON)
+OPTION(E2 "The Etapa 2 compilation" OFF)
+OPTION(E3 "The Etapa 3 compilation" OFF)
+OPTION(E4 "The Etapa 4 compilation" OFF)
+OPTION(E5 "The Etapa 5 compilation" OFF)
+OPTION(E6 "The Etapa 6 compilation" OFF)
+OPTION(E7 "The Etapa 7 compilation" OFF)
 
-IF(ETAPA_1)
+IF(E1)
   add_definitions(-DAVALIACAO_ETAPA_1=1)
-ELSEIF(ETAPA_2)
+ELSEIF(E2)
   add_definitions(-DAVALIACAO_ETAPA_2=1)
-ELSEIF(ETAPA_3)
+ELSEIF(E3)
   add_definitions(-DAVALIACAO_ETAPA_3=1)
-ELSEIF(ETAPA_4)
+ELSEIF(E4)
   add_definitions(-DAVALIACAO_ETAPA_4=1)
-ELSEIF(ETAPA_5)
+ELSEIF(E5)
   add_definitions(-DAVALIACAO_ETAPA_5=1)
-ELSEIF(ETAPA_6)
+ELSEIF(E6)
   add_definitions(-DAVALIACAO_ETAPA_6=1)
-ELSEIF(ETAPA_7)
+ELSEIF(E7)
   add_definitions(-DAVALIACAO_ETAPA_7=1)
-ENDIF(ETAPA_1)
+ENDIF(E1)
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    message(STATUS "Setting build type to 'Debug' as none was specified.")
