--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ ADD_EXECUTABLE(main
   src/cc_list.c
   src/cc_tree.c
   src/cc_ast_f.c
+  src/cc_cod.c
 )
 TARGET_LINK_LIBRARIES(main ${FLEX_LIBRARIES})
 
