Lista para inserção do código ILOC gerado #36.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ ADD_EXECUTABLE(main
   src/cc_tree.c
   src/cc_ast_f.c
   src/cc_cod.c
+  src/cc_code_list.c
 )
 TARGET_LINK_LIBRARIES(main ${FLEX_LIBRARIES})
 
